chore(spring): Work towards spring boot 4.0 upgrade